syntax = "proto3";
package curioucity.v1alpha;

import "third_party/v1alpha/discord.proto";
import "third_party/v1alpha/website.proto";
import "curioucity/v1alpha/url.proto";
import "curioucity/v1alpha/general.proto";

message ResourceUnion {
  oneof resource {
    third_party.v1alpha.DiscordGuild discord_guild = 1;
    third_party.v1alpha.DiscordThread discord_thread = 2;
    third_party.v1alpha.DiscordMessage discord_message = 3;
    third_party.v1alpha.Website website = 4;
  }
} 

message FullTag {
  string id = 1;
  string name = 2;
  repeated curioucity.v1alpha.ResourceUnion resources = 3;
  string created_timestamp_at_curioucity = 4;
}

message FullUrl {
  string id = 1;
  string url = 2;
  repeated curioucity.v1alpha.SingularUrl references = 3;
  repeated ResourceUnion resources = 4;
  curioucity.v1alpha.ResourceType resource_type = 5;
  string created_timestamp_at_curioucity = 6;
}